Added lsaving and loading from-to storage

--- a/tensorflow/index.html
+++ b/tensorflow/index.html
@@ -1,2 +1,3 @@
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"> </script>
-<script src="./ts.js"></script>
+<script src="./tf.js"></script>
+<input id="storage" type="button" value="Clear storage" onclick="clearStorage();" />
