--- a/tensorflow/index.html
+++ b/tensorflow/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <form name="train" method="post" enctype="multipart/form-data">
+            <!--
             <p>
             <label for="xtrain">Choose the <b>Training</b> set for <b>X</b>: </label>
             <input type="file" id="xtrain" name="xtrain" accept="text/csv" value="../dataset/xtrain.csv"/>
@@ -24,10 +25,10 @@
             <label for="xtest">Choose the <b>Test</b> set for <b>X</b>: </label>
             <input type="file" id="xtest" name="xtest" accept="text/csv" value="../dataset/xtest.csv"/>
             </p>
+            -->
+            <input id="trainAction" type="button" value="TRAIN with the current set" onclick="loadCSV();" />
             
-            <input id="trainAction" type="button" value="Train with this set" onclick="loadCSV();" />
-            
-            <input id="storage" type="button" value="Clear storage" onclick="clearStorage();" />
+            <input id="storage" type="button" value="CLEAR local storage" onclick="clearStorage();" />
         </form>
     </body>
 </html>
